--- a/tcc/setup/sitecatalogo/templates/index.html
+++ b/tcc/setup/sitecatalogo/templates/index.html
@@ -1,14 +1,15 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pagina inicial</title>
 </head>
 <body>
-    <form method="post">
-        {{ form.as_p }}
-        <input type="submit" value="Send">
-    </form>
+
+<h2>Pagina inicial</h2>
+
+
 </body>
 </html>
