--- a/tcc/setup/sitecatalogo/templates/index.html
+++ b/tcc/setup/sitecatalogo/templates/index.html
@@ -1,15 +1,149 @@
+{% load static %}
+{% include partials/header.html}
 
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina inicial</title>
-</head>
-<body>
+    <section class="catalog" id="catalog">
+      <div class="content">
+        <div class="title-wrapper-catalog">
+          <p>jabutica</p>
+          <h3>Catalog</h3>
+        </div>
+        <div class="filter-card">
+          <input
+            type="text"
+            class="search-input"
+            placeholder="Choose your favorite model"
+          />
+          <button class="search-button">Pesquisar</button>
+        </div>
+        <div class="card-wrapper">
+          <div class="card-item">
+            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <div class="card-content">
+              <h3>oijioj</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus.
+              </p>
+              <button type="button">I want this!</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <div class="card-content">
+              <h3>uby</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus.
+              </p>
+              <button type="button">I want this!</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <div class="card-content">
+              <h3>inhuih</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus.
+              </p>
+              <button type="button">I want this!</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <div class="card-content">
+              <h3>ihuih</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus.
+              </p>
+              <button type="button">I want this!</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <div class="card-content">
+              <h3>hiuhui</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus.
+              </p>
+              <button type="button">I want this!</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <div class="card-content">
+              <h3>ihuh</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus.
+              </p>
+              <button type="button">I want this!</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <div class="card-content">
+              <h3>uhuh</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus.
+              </p>
+              <button type="button">I want this!</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <div class="card-content">
+              <h3>ijij</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus.
+              </p>
+              <button type="button">I want this!</button>
+            </div>
+          </div>
+          <div class="card-item">
+            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <div class="card-content">
+              <h3>ijiuj</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus.
+              </p>
+              <button type="button">I want this!</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-<h2>Pagina inicial</h2>
+    <section class="about" id="about">
+      <div class="content">
+        <div class="title-wrapper-about">
+          <p>Know about us</p>
+          <h3>About</h3>
+        </div>
+        <div class="about-content">
+          <div class="left">
+            <img src="" alt="About" />
+          </div>
+          <div class="right">
+            <h3>Join technology and mobility</h3>
+            <p>
+              Bem-vindo à Urbano Fino, sua loja de moda urbana e sofisticada. Na Urbano Fino,
+              acreditamos que a moda é uma expressão pessoal. Oferecemos roupas e acessórios cuidadosamente
+              selecionados para ajudá-lo a criar seu próprio estilo. Nosso compromisso é fornecer qualidade,
+              estilo e acessibilidade em cada peça. Além disso, valorizamos a sustentabilidade em nossa jornada na moda.
+              Explore nosso catálogo e destaque-se na multidão com a Urbano Fino.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
-</body>
+      {% include partials/footer.html}
+  </body>
 </html>
