--- a/tcc/setup/sitecatalogo/templates/index.html
+++ b/tcc/setup/sitecatalogo/templates/index.html
@@ -1,5 +1,6 @@
+{% include 'partials/header.html' %}
 {% load static %}
-{% include partials/header.html}
+
 
     <section class="catalog" id="catalog">
       <div class="content">
@@ -17,7 +18,7 @@
         </div>
         <div class="card-wrapper">
           <div class="card-item">
-            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
             <div class="card-content">
               <h3>oijioj</h3>
               <p>
@@ -28,7 +29,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
             <div class="card-content">
               <h3>uby</h3>
               <p>
@@ -39,7 +40,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
             <div class="card-content">
               <h3>inhuih</h3>
               <p>
@@ -50,7 +51,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
             <div class="card-content">
               <h3>ihuih</h3>
               <p>
@@ -61,7 +62,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
             <div class="card-content">
               <h3>hiuhui</h3>
               <p>
@@ -72,7 +73,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
             <div class="card-content">
               <h3>ihuh</h3>
               <p>
@@ -83,7 +84,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
             <div class="card-content">
               <h3>uhuh</h3>
               <p>
@@ -94,7 +95,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
             <div class="card-content">
               <h3>ijij</h3>
               <p>
@@ -105,7 +106,7 @@
             </div>
           </div>
           <div class="card-item">
-            <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+            <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
             <div class="card-content">
               <h3>ijiuj</h3>
               <p>
@@ -144,6 +145,6 @@
     </section>
 
 
-      {% include partials/footer.html}
+      {% include 'partials/footer.html' %}
   </body>
 </html>
