--- a/tcc/setup/sitecatalogo/templates/partials/footer.html
+++ b/tcc/setup/sitecatalogo/templates/partials/footer.html
@@ -11,8 +11,8 @@
         <div class="footer-social">
           <h4>Estamos Conectados</h4>
           <div class="social-icons">
-            <img src='{%static "admin/img/instagram.png" %}' alt="Instagram" />
-            <img src='{%static "images/facebook.png" %}' alt="Facebook" />
+            <img src='{% static "assets/img/instagram.png" %}' alt="Instagram" />
+            <img src='{% static "assets/img/facebook.png" %}' alt="Facebook" />
           </div>
         </div>
         <div class="footer-contact">
