--- a/tcc/setup/sitecatalogo/templates/partials/header.html
+++ b/tcc/setup/sitecatalogo/templates/partials/header.html
@@ -1,11 +1,11 @@
 {% load static %}
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Urbano Fino</title>
-    <link rel="stylesheet" href="{%static 'admin/css/styles.css' %}" />
+    <link rel="stylesheet" href="{% static 'assets/css/styles.css' %}" />
   </head>
   <body>
     <header>
@@ -28,7 +28,7 @@
               asperiores?
             </p>
           </div>
-          <img src='{%static "admin/img/felicidade.png" %}' alt="feliz" />
+          <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
         </div>
       </div>
     </header>
