--- a/tcc/setup/sitecatalogo/templates/partials/header.html
+++ b/tcc/setup/sitecatalogo/templates/partials/header.html
@@ -8,8 +8,8 @@
           <ul>
             <li><a href="#catalog">Catalago</a></li>
             <li><a href="#about">Sobre Nós</a></li>
-            <li><a href="#categ">Categorias</a></li>
-            <button>Login</button>
+            <li><a href={% url 'categoria' %} class="active">Categorias</a></li>
+            <button >Login</button>
           </ul>
         </nav>
         <div class="header-block">
