criação do banner.html

--- a/tcc/setup/sitecatalogo/templates/index.html
+++ b/tcc/setup/sitecatalogo/templates/index.html
@@ -2,20 +2,16 @@
 {% load static %}
 {% block content %}
 {% include 'partials/header.html' %}
+{% include 'partials/banner.html' %}
 
     <section class="catalog" id="catalog">
       <div class="content">
         <div class="title-wrapper-catalog">
-          <p>jabutica</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisic</p>
           <h3>Catalog</h3>
         </div>
         <div class="filter-card">
-          <input
-            type="text"
-            class="search-input"
-            placeholder="Choose your favorite model"
-          />
-          <button class="search-button">Pesquisar</button>
+          
         </div>
         {% include 'partials/card.html' %}
 
