--- a/tcc/setup/sitecatalogo/templates/partials/header.html
+++ b/tcc/setup/sitecatalogo/templates/partials/header.html
@@ -6,22 +6,10 @@
           <p class="brand">Urbano<strong>Fino</strong></p>
 
           <ul>
-            <li><a href="#catalog">Catalago</a></li>
-            <li><a href="#about">Sobre Nós</a></li>
+            <li><a href={% url 'index' %} class="active" ,"#catalog">Home</a></li>
+            <li><a href={% url 'index' %} class="active" ,"#about">Sobre Nós</a></li>
             <li><a href={% url 'categoria' %} class="active">Categorias</a></li>
             <button >Login</button>
           </ul>
         </nav>
-        <div class="header-block">
-          <div class="text">
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
-              asperiores?
-            </p>
-          </div>
-          <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
-        </div>
-      </div>
-    </header>
-  
+      
