criação do  about.html

--- a/tcc/setup/sitecatalogo/templates/index.html
+++ b/tcc/setup/sitecatalogo/templates/index.html
@@ -4,47 +4,9 @@
 {% include 'partials/header.html' %}
 {% include 'partials/banner.html' %}
 
-    <section class="catalog" id="catalog">
-      <div class="content">
-        <div class="title-wrapper-catalog">
-          <p>Lorem ipsum dolor sit amet consectetur adipisic</p>
-          <h3>Catalog</h3>
-        </div>
-        <div class="filter-card">
-          
-        </div>
         {% include 'partials/card.html' %}
 
-              <button type="button">I want this!</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="about" id="about">
-      <div class="content">
-        <div class="title-wrapper-about">
-          <p>Know about us</p>
-          <h3>About</h3>
-        </div>
-        <div class="about-content">
-          <div class="left">
-            <img src="" alt="About" />
-          </div>
-          <div class="right">
-            <h3>Join technology and mobility</h3>
-            <p>
-              Bem-vindo à Urbano Fino, sua loja de moda urbana e sofisticada. Na Urbano Fino,
-              acreditamos que a moda é uma expressão pessoal. Oferecemos roupas e acessórios cuidadosamente
-              selecionados para ajudá-lo a criar seu próprio estilo. Nosso compromisso é fornecer qualidade,
-              estilo e acessibilidade em cada peça. Além disso, valorizamos a sustentabilidade em nossa jornada na moda.
-              Explore nosso catálogo e destaque-se na multidão com a Urbano Fino.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+        {% include 'partials/about.html' %}
 
 
       {% include 'partials/footer.html' %}
