--- a/tcc/setup/sitecatalogo/templates/partials/banner.html
+++ b/tcc/setup/sitecatalogo/templates/partials/banner.html
@@ -1,10 +1,9 @@
 {% load static  %}
 <div class="header-block">
     <div class="text">
-      <h2>Lorem ipsum dolor sit amet</h2>
+      <h2>Urbano Fino</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
-        asperiores?
+        Não perca a chance de estar na moda! Cadastre-se agora em nosso catálogo de roupas exclusivas e receba as últimas tendências diretamente na sua caixa de entrada. Seja o primeiro a arrasar com os looks mais incríveis!
       </p>
     </div>
     <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
