--- a/tcc/setup/sitecatalogo/templates/partials/card.html
+++ b/tcc/setup/sitecatalogo/templates/partials/card.html
@@ -1,4 +1,14 @@
 {% load static %}
+
+<section class="catalog" id="catalog">
+  <div class="content">
+    <div class="title-wrapper-catalog">
+      <p>Fotos da nossa linha do tempo</p>
+      <h3>UrbanoFino</h3>
+    </div>
+    <div class="filter-card">
+      
+    </div>
 <div class="card-wrapper">
     <div class="card-item">
       <img src='{% static "assets/img/felicidade.png" %}' alt="feliz" />
@@ -8,7 +18,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Repellendus.
         </p>
-        <button type="button">I want this!</button>
+        <button type="button">Ver!</button>
       </div>
     </div>
     <div class="card-item">
@@ -19,7 +29,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Repellendus.
         </p>
-        <button type="button">I want this!</button>
+        <button type="button">Ver!</button>
       </div>
     </div>
     <div class="card-item">
@@ -30,7 +40,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Repellendus.
         </p>
-        <button type="button">I want this!</button>
+        <button type="button">Ver!</button>
       </div>
     </div>
     <div class="card-item">
@@ -41,7 +51,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Repellendus.
         </p>
-        <button type="button">I want this!</button>
+        <button type="button">Ver!</button>
       </div>
     </div>
     <div class="card-item">
@@ -52,7 +62,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Repellendus.
         </p>
-        <button type="button">I want this!</button>
+        <button type="button">Ver!</button>
       </div>
     </div>
     <div class="card-item">
@@ -63,7 +73,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Repellendus.
         </p>
-        <button type="button">I want this!</button>
+        <button type="button">Ver!</button>
       </div>
     </div>
     <div class="card-item">
@@ -74,7 +84,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Repellendus.
         </p>
-        <button type="button">I want this!</button>
+        <button type="button">Ver!</button>
       </div>
     </div>
     <div class="card-item">
@@ -85,7 +95,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Repellendus.
         </p>
-        <button type="button">I want this!</button>
+        <button type="button">Ver!</button>
       </div>
     </div>
     <div class="card-item">
@@ -96,3 +106,9 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Repellendus.
         </p>
+        <button type="button">Ver!</button>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
