--- a/tcc/setup/sitecatalogo/templates/partials/header.html
+++ b/tcc/setup/sitecatalogo/templates/partials/header.html
@@ -6,8 +6,8 @@
           <p class="brand">Urbano<strong>Fino</strong></p>
 
           <ul>
-            <li><a href={% url 'index' %} class="active" ,"#catalog">Home</a></li>
-            <li><a href={% url 'index' %} class="active" ,"#about">Sobre Nós</a></li>
+            <li><a href={% url 'index' %} class="active">Home</a></li>
+            <li><a href={% url 'index' %} class="active"><a href ="#about">Sobre Nós</a></li>
             <li><a href={% url 'categoria' %} class="active">Categorias</a></li>
             <button >Login</button>
           </ul>
