linkando com o login

--- a/tcc/setup/sitecatalogo/templates/partials/header.html
+++ b/tcc/setup/sitecatalogo/templates/partials/header.html
@@ -9,7 +9,9 @@
             <li><a href={% url 'index' %} class="active">Home</a></li>
             <li><a href={% url 'index' %} class="active"><a href ="#about">Sobre Nós</a></li>
             <li><a href={% url 'categoria' %} class="active">Categorias</a></li>
+            <a href={% url 'user_login' %}>
             <button >Login</button>
+            </a>
           </ul>
         </nav>
       
